@@ -77,11 +77,28 @@
 <table cellpadding="5" width="100%">
 	<tr>
 		<td class="fall light" align="center">
-			<B>{if $network.page > 1}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x - 1" x=$network.page}'; return false;">&laquo;&laquo;&laquo;</A>{else}<FONT CLASS="BLEND">&laquo;&laquo;&laquo;</FONT>{/if}
+			
+			<B>{if $network.page > 1}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page=1'; return false;">&#9668;</A>{else}<FONT CLASS="BLEND">&#9668;</FONT>{/if}
+
+			<B>{if $network.page - 50 >= 1}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x - 50" x=$network.page}'; return false;">&laquo;&laquo;&laquo;</A>{else}<FONT CLASS="BLEND">&laquo;&laquo;&laquo;</FONT>{/if}
+
+			<B>{if $network.page - 10 >= 1}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x - 10" x=$network.page}'; return false;">&laquo;&laquo;</A>{else}<FONT CLASS="BLEND">&laquo;&laquo;</FONT>{/if}
+
+			<B>{if $network.page > 1}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x - 1" x=$network.page}'; return false;">&laquo;</A>{else}<FONT CLASS="BLEND">&laquo;</FONT>{/if}
+
 			{t 0=$network.page 1=$network.pages}Page $0 of $1{/t}
-			{if $network.page < $network.pages}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x + 1" x=$network.page}'; return false;">&raquo;&raquo;&raquo;</A>{else}<FONT CLASS="BLEND">&raquo;&raquo;&raquo;<FONT>{/if}</B>
+			{if $network.page < $network.pages}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x + 1" x=$network.page}'; return false;">&raquo;</A>{else}<FONT CLASS="BLEND">&raquo;<FONT>{/if}</B>
+
+			{if $network.page + 10 <= $network.pages}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x + 10" x=$network.page}'; return false;">&raquo;&raquo;</A>{else}<FONT CLASS="BLEND">&raquo;&raquo;<FONT>{/if}</B>
+
+			{if $network.page + 50 <= $network.pages}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={math equation="x + 50" x=$network.page}'; return false;">&raquo;&raquo;&raquo;</A>{else}<FONT CLASS="BLEND">&raquo;&raquo;&raquo;<FONT>{/if}</B>
+
+			{if $network.page < $network.pages}<A HREF="javascript:void(0);" onclick="parent.location.href='?m=chooseip&netid={$netid}{if $device}&device={$device}{/if}&page={$network.pages}'; return false;">&#9658;</A>{else}<FONT CLASS="BLEND">&#9658;<FONT>{/if}</B>
+	
 		</td>
+
 	</tr>
+	
 </table>
 </body>
 {/if}
