@@ -23,6 +23,7 @@ version ? (????-??-??):
     groups and value filtering (alec)
   - invoicenote: we can change pay type (chilan)
   - lmsd/cutoff: added 'use_customerassignments' option (alec)
+  - improved page navigation ergonomy in chooseip window (chilan)
 
 version 1.11.3 Quetesh (2008-03-26):
 
